# OpenVibe

./: .actignore  .editorconfig  .env.example  .gitignore  .prettierignore  .viberules  1.txt  AGENTS.md  CHANGELOG-RU.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README-RU.md  README.md  SECURITY.md  SUPPORT.md  TODO  eslint.config.js  fix_empty_strings.py  openvibe.toml  package-lock.json  package.json  release-please-config.json  test_graph.js  translate_all.py  tsconfig.json  tsconfig.node.json  v1.3.1-log.txt  vite.config.ts  vitest.config.ts
.config/niri/cfg/: input.kdl  keybinds.kdl
.config/niri/theme/: gtkrc  gtkrc-2.0  wlogout
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release-please.yml  semantic-pr.yml
.husky/: pre-push
api/: go.mod  main.go  proxy.go  updater.go
crates/agent/: Cargo.toml  README.md
crates/agent-tool/: Cargo.toml  README.md
crates/agent-tool/src/: agent_tool.rs  bash.rs  definition.rs  edit.rs  execute.rs  executor.rs  git.rs  lib.rs  list_dir.rs  read.rs  search.rs  todo.rs  write.rs
crates/agent/src/: agent.rs  chat.rs  config.rs  definition.rs  events.rs  executor.rs  lib.rs  prompt.rs  request.rs  rollback.rs  send.rs  snapshot.rs  sse.rs  sub_trace.rs  summarize.rs  token.rs  transform.rs
crates/chats/: Cargo.toml  README.md
crates/chats/src/: lib.rs  migration.rs  store.rs  types.rs  utils.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: dotenv.rs  lib.rs  loader.rs  provider.rs  types.rs
crates/db/: Cargo.toml  README.md
crates/db/src/: error.rs  lib.rs  models.rs  utils.rs
crates/editor/: Cargo.toml  README.md
crates/editor/src/: lib.rs
crates/git/: Cargo.toml  README.md
crates/git/src/: branch.rs  commit.rs  diff.rs  error.rs  github.rs  history.rs  lib.rs  merge.rs  repository.rs  status.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: downloader.rs  languages.rs  lib.rs  runtime.rs  server.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: config.rs  lib.rs  manager.rs  path.rs  process.rs  server.rs  transport.rs  types.rs
crates/scg2/: Cargo.toml  README.md
crates/scg2/src/: assembler.rs  ast.rs  diagnostics.rs  engine.rs  git_delta.rs  graph.rs  lib.rs  recency.rs  types.rs
crates/search/: Cargo.toml  README.md
crates/search/src/: cache.rs  commands.rs  config.rs  content_search.rs  gitignore_filter.rs  lib.rs  syntax.rs  text_search.rs  types.rs  utils.rs  vector_search.rs  walker.rs
crates/search/tests/: search_tests.rs
crates/terminal/: Cargo.toml  README.md
crates/terminal/src/: lib.rs  manager.rs  session.rs  shell.rs
debug/: out.txt  out1.txt
renderer/: constants.ts  fonts.ts  index.html  main.tsx  styles.css  tauri-bridge.ts  types.ts  utils.ts  vite-env.d.ts
renderer/components/AgentToolView/: AgentToolView.tsx
renderer/hooks/: useAppHandlers.ts  useAppInit.ts  useChats.ts  useI18n.tsx  useModels.ts  useProjects.ts  useTerminalActions.ts  useTheme.tsx  useVibeEvents.ts
renderer/i18n/: am.ts  ar.ts  az.ts  be.ts  bg.ts  bn.ts  cs.ts  de.ts  el.ts  en.ts  es.ts  fa.ts  fil.ts  fr.ts  hi.ts  id.ts  index.ts  it.ts  ja.ts  kk.ts  ko.ts  mr.ts  ms.ts  my.ts  nl.ts  pa.ts  pl.ts  pt.ts  ro.ts  ru.ts  sr.ts  sv.ts  th.ts  tr.ts  uk.ts  vi.ts  zh-CN.ts  zh-TW.ts
renderer/styles/: App.css  ChatHistory.css  ChatSidebar.css  CodeBlock.css  Confirm.css  ContextMenu.css  Editor.css  EditorArea.css  FileTree.css  History.css  ImageViewer.css  Loading.css  ProjectRail.css  PromptInput.css  SearchPopup.css  SessionList.css  Settings.css  TerminalCodeBlock.css  Terminals.css  Titlebar.css  Tool.css  Tooltip.css  VideoViewer.css  Welcome.css
renderer/themes/: Ayu.json  carbonfox.json  cursor.json  dark.json  github.json  one-dark.json  themes.ts
renderer/utils/: preloader.ts
src/: constants.ts  fonts.ts  index.html  main.tsx  scrollbar.css  styles.css  tauri-bridge.ts  types.ts  utils.ts  vite-env.d.ts  webviewGuards.ts  zoomConfig.ts
src-tauri/: Cargo.toml  main.rs  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  chats.rs  config.rs  db.rs  http_client.rs  lib.rs  llm.rs  main.rs  terminal.rs  tools.rs  vector_search.rs  walker.rs
src-tauri/src/commands/: agent.rs  chats.rs  clipboard.rs  editor.rs  fs.rs  git.rs  llm.rs  lsp.rs  mcp.rs  misc.rs  mod.rs  models.rs  projects.rs  providers.rs  scg2.rs  terminals.rs  tools.rs
src-tauri/tests/: vector_search_integration_test.rs
src/bridge/: chats.ts  config.ts  events.ts  files.ts  git.ts  helpers.ts  mcp.ts  projects.ts  state.ts  terminals.ts
src/hooks/: useAnimations.tsx  useAppHandlers.ts  useAppInit.ts  useChats.ts  useI18n.tsx  useModels.ts  useProjects.ts  useShortcuts.ts  useTheme.tsx  useVibeEvents.ts
src/i18n/: am.ts  ar.ts  az.ts  be.ts  bg.ts  bn.ts  cs.ts  de.ts  el.ts  en.ts  es.ts  fa.ts  fil.ts  fr.ts  hi.ts  id.ts  index.ts  it.ts  ja.ts  kk.ts  ko.ts  mr.ts  ms.ts  my.ts  nl.ts  pa.ts  pl.ts  pt.ts  ro.ts  ru.ts  sr.ts  sv.ts  th.ts  tr.ts  uk.ts  vi.ts  zh-CN.ts  zh-TW.ts
src/services/: monacoLspClient.ts  scg2Tracker.ts
src/styles/: App.css  ChatHistory.css  ChatSidebar.css  CodeBlock.css  Confirm.css  ContextMenu.css  EditProjectPopup.css  Editor.css  EditorArea.css  FBadge.css  FatalError.css  FileTree.css  History.css  ImageViewer.css  Loading.css  ProjectRail.css  PromptInput.css  RollbackPill.css  SearchInCode.css  SearchPopup.css  SessionList.css  Settings.css  SubAgentView.css  TerminalCodeBlock.css  Terminals.css  Titlebar.css  Tool.css  Tooltip.css  VideoViewer.css  Welcome.css
src/themes/: Ayu.json  cursor.json  default.json  everforest.json  flexoki.json  github.json  gruvbox-medium.json  gruvbox-soft.json  gruvbox.json  kanagawa.json  monokai.json  nord.json  one-dark.json  themes.ts  vercel.json
src/utils/: clipboard.ts  paths.ts  preloader.ts  searchLanguages.ts  searchSyntax.ts  string.ts
(+258 files in other folders)
