[package]
name = "openvibe"
version = "1.2.0"
description = "Open-source agentic coding environment"
authors = ["mt-studio"]
edition = "2021"

[lib]
name = "openvibe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
db = { path = "../crates/db" }
rusqlite = { version = "0.32", features = ["bundled"] }
notify = { version = "7", features = ["macos_fsevent"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
once_cell = "1"
base64 = "0.22"
regex = "1"
reqwest = { version = "0.12", features = ["json", "http2"] }
search = { path = "../crates/search" }
terminal = { path = "../crates/terminal" }
agent = { path = "../crates/agent" }
agent-tool = { path = "../crates/agent-tool" }
config = { path = "../crates/config" }
chats = { path = "../crates/chats" }

