[package]
name = "agent"
version = "1.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "http2"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
scg2 = { path = "../scg2" }

[dev-dependencies]
tempfile = "3"
