[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
tracing = "0.1"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.13.4", features = ["stream"] }
tar = "0.4.46"
flate2 = "1.1.9"
zip = "8.6.0"
futures-util = "0.3.30"
tempfile = "3.10.1"
async-compression = { version = "0.4.42", features = ["tokio", "gzip"] }
