[package]
name = "scg2"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
petgraph = "0.7"
parking_lot = "0.12"
tracing = "0.1"
git = { path = "../git" }
tree-sitter = "*"
tree-sitter-rust = "*"
tree-sitter-javascript = "*"
tree-sitter-typescript = "*"
tree-sitter-python = "*"

[dev-dependencies]
tempfile = "3"
